Porperties configuration file added