@@ -1,7 +1,6 @@
 package it.disco.unimib.suggester;
 
 import com.google.gson.Gson;
-import com.sun.tools.javac.util.List;
 import it.disco.unimib.suggester.model.LanguageType;
 import it.disco.unimib.suggester.translator.domain.IDetectedLanguage;
 import it.disco.unimib.suggester.translator.domain.ILookedupTerm;
@@ -34,9 +33,9 @@ public class SuggesterApplicationTests {
         String text = "Salve Mondo!";
         //log.info(text.getText());
         Gson gson = new Gson();
-        String json = gson.toJson(List.of(text));
+        String json = gson.toJson(Collections.singletonList(text));
         //log.info(json);
-        java.util.List<IDetectedLanguage> messageList = translator.detect(List.of(text));
+        java.util.List<IDetectedLanguage> messageList = translator.detect(Collections.singletonList(text));
         Assert.assertEquals("it", messageList.get(0).getLanguage());
         Assert.assertEquals(0, messageList.get(0).getScore().compareTo(1.0));
     }
@@ -45,7 +44,7 @@ public class SuggesterApplicationTests {
     public void translate() throws IOException {
 
         String text = "Welcome to Microsoft Translator. Guess how many languages I speak!!";
-        java.util.List<ITranslation> messageList = translator.translate(List.of(text), LanguageType.IT);
+        java.util.List<ITranslation> messageList = translator.translate(Collections.singletonList(text), LanguageType.IT);
         Assert.assertEquals("en", messageList.get(0).getLanguage());
         Assert.assertEquals("de", messageList.get(0).getTranslations().get(0).getDestLanguage());
         System.out.println(messageList.get(0).toString());
@@ -55,7 +54,7 @@ public class SuggesterApplicationTests {
     @Test
     public void lookup() {
         String text = "Casa";
-        Optional<java.util.List<ILookedupTerm>> lookups = translator.lookup(List.of(text), LanguageType.IT, LanguageType.EN);
+        Optional<java.util.List<ILookedupTerm>> lookups = translator.lookup(Collections.singletonList(text), LanguageType.IT, LanguageType.EN);
         System.out.println(lookups.orElse(Collections.emptyList()).toString());
         Assert.assertEquals(lookups.orElse(Collections.emptyList()).get(0).getSource().toLowerCase(), "pineapples");
 
